argocd_apps/nginx/ingress-alb-to-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-to-nginx
  namespace: nginx-ingress
spec:
  ingressClassName: alb
  rules:
    - host: "*.khangtictoc.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-ingress-controller
                port:
                  number: 80
